Wed Jan  8 11:19:39 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* share/doc/developers_guide_ja.texi : Update versions of the current
	  development environment.

Tue Jan  7 18:24:17 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.5
	  - Fix incomplete expression-constancy check under the constraits of
	    ISO C99 standard.
	  - Clip code-exam passivation feature into Examination::Passivation
	    module in order to easily create passive code-exam classes.
	  - Revise the interpreter interface in order to make evaluation modes
	    of notification and side-effects suppression are orthogonal.
	  - Add predicate method Type#named? which indicates whether a type has
	    been declared with a tag or not.
	  - Add patch of identifier to typedef-name translation mode in order
	    not to abend when multiple typedefed types of struct/union/enum is
	    redeclared in a single typedef declaration again.
	  - Fix typo in C0001 message text.
	  - Fix pattern matchig algorithm of the token substitution feature so
	    that the pattern `{ __adlint__any }' can match with both `{}' and
	    `{ ... }'.
	  - Fix group skip logic of the preprocessor in order to treat
	    string-literals and character-constants in the skipping group
	    correctly.

Tue Jan  7 17:51:42 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/lexer.rb : Fix group skip logic of the preprocessor in
	  order to treat string-literals and character-constants in the
	  skipping group correctly.

	* features/code_check/E0016.feature : Add scenario to reproduce a known
	  bug.

Tue Jan  7 13:41:16 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/subst.rb : Fix pattern matchig algorithm of the token
	  substitution feature so that the pattern `{ __adlint__any }' can
	  match with both `{}' and `{ ... }'.

Sat Jan  4 05:22:13 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/mesg.d/c_builtin/ja_JP/messages.yml : Fix typo in C0001 message