@@ -136,3 +136,7 @@ message_definition:
     classes:
       - "ERR:X99"
     format: "#include ディレクティブに \"ファイル名\" または <ファイル名> が見つかりません。"
+  E0018:
+    classes:
+      - "ERR:X99"
+    format: "大域スコープに余分なセミコロンが見つかりました。"
