@@ -2448,6 +2448,7 @@ context_line
 * E0014::ラベルのアドレスを取得するための && 単項演算子は GCC 独自の拡張機能です。
 * E0015::ラベルのアドレスを指定した goto 文は GCC 独自の拡張機能です。
 * E0016::終了しないコメントブロックが見つかりました。
+* E0018::大域スコープに余分なセミコロンが見つかりました。
 * W0001::括弧 `()' のネストの深さが 32 を超えています。このプログラムは、ISO C90 標準規格に厳密に合致していません。
 * W0002::関数 `%s()' の定義において、識別子と仮引数宣言を分けて記述するのは、古いスタイルです。
 * W0003::この switch 文には default ラベルが含まれていません。
@@ -3554,6 +3555,35 @@ foo:;
 @subsection 対応バージョン
 
 1.0.0
+
+@node E0018
+@section E0018
+@cindex E0018
+
+@subsection メッセージ本文
+
+大域スコープに余分なセミコロンが見つかりました。
+
+@subsection 内容
+
+大域スコープ中にセミコロンが単独で現れた場合に出力されます。
+
+@subsection サンプルコード
+
+@verbatim
+int foo(int i)
+{
+    return i + 1;
+}; /* E0018 */
+@end verbatim
+
+@subsection 関連メッセージ
+
+なし。
+
+@subsection 対応バージョン
+
+3.2.6
 
 @node W0001
 @section W0001
